--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "firebase-admin": "^8.4.0",
-    "fireorm": "^0.6.5"
+    "fireorm": "^0.6.5",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.4",
