--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "firebase-admin": "^8.4.0",
+    "firebase-functions": "^3.2.0",
     "fireorm": "^0.6.5",
+    "lodash.camelcase": "^4.3.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "@types/cheerio": "^0.22.13",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
+    "@types/lodash.camelcase": "^4.3.6",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "eslint": "^6.3.0",
