--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
+    "firebase": "^6.5.0",
     "firebase-admin": "^8.4.0",
     "firebase-functions": "^3.2.0",
     "fireorm": "^0.6.5",
     "lodash.camelcase": "^4.3.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
@@ -21,19 +24,24 @@
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.18",
     "@types/lodash.camelcase": "^4.3.6",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-jest": "^22.16.0",
+    "eslint-plugin-react": "^7.14.3",
     "jest": "^24.9.0",
+    "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
   },
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "start:web": "parcel ./app/index.html"
   },
   "author": "mamodom <mamodom@gmail.com>",
   "license": "ISC"
