--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
@@ -19,6 +20,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/cheerio": "^0.22.13",
     "@types/dotenv": "^6.1.1",
+    "@types/google__maps": "^0.5.7",
     "@types/jest": "^24.0.18",
     "@types/lodash.camelcase": "^4.3.6",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
