--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/functions.js",
   "dependencies": {
+    "@google-cloud/pubsub": "^0.31.1",
     "@google/maps": "^0.5.5",
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
